@@ -8,6 +8,10 @@ Deprecated:
 
 * Deprecate Python 3.7 support
 
+Other:
+
+* Raise an exception if invalid flags are passed to ``IPAddress``, ``IPNetwork`` or ``IPRange``
+
 --------------
 Release: 0.9.0
 --------------
